--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,7 @@ html {height: 100%; margin: 0; padding: 0; width: 100%;}
     justify-content: center;
     flex-flow: column;
     background-image: linear-gradient(to top, rgba(161, 140, 209, 0.71) 0%, rgba(251, 194, 235, 0.1) 100%);
+    text-align:center;
 }
 #slider .slide-item .slide-content h3 {
     font-size: 3rem;
