--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ html {height: 100%; margin: 0; padding: 0; width: 100%;}
     height: 100vh;
 }
 .container {
-    height: 50vh;
+    height: 500px;
     overflow: hidden;
     position: relative;
     max-width: 1000px;
